--- a/assets/main.css
+++ b/assets/main.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background: url(gradient_abstraction_blue_205793_3840x2160.jpg); 
+    background: url(C:\TLHT\HK2_2023-2024\LapTrinhUngDungWeb\KingofMelody\assets\img\gradient_abstraction_blue_205793_3840x2160.jpg); 
     background-size: 100%;
     /* linear-gradient(to bottom right, purple, blue, rgb(32,202,255)); */
 }
