--- a/assets/main.css
+++ b/assets/main.css
@@ -4,9 +4,21 @@
     box-sizing: border-box;
 }
 
+@font-face {
+    font-family: neosans;
+    src: url("font/UTM_Neo_Sans_IntelBold_Italic.ttf");
+}
+
 body{
-    background: url(C:\TLHT\HK2_2023-2024\LapTrinhUngDungWeb\KingofMelody\assets\img\gradient_abstraction_blue_205793_3840x2160.jpg); 
-    background-size: 100%;
+    background-image: linear-gradient(132deg, rgb(228, 157, 252), rgb(168,98,230), rgb(122, 57, 214), rgb(95, 30, 203), rgb(69,6, 191),rgb(61,7,185),rgb(65,19,185), rgb(71, 60, 190), rgb(77, 99, 197), rgb(84, 132, 208), rgb(109, 162, 214), rgb(131, 188, 221), rgb(168, 228, 236));
+    width: 100vw;
+    height: 100vh;
+    font-family: neosans;
     /* linear-gradient(to bottom right, purple, blue, rgb(32,202,255)); */
+}
+
+#content .menu {
+    color: white;
+    font-size: 12px;
 }
 
