--- a/Image/main.css
+++ b/Image/main.css
@@ -4,9 +4,64 @@
     box-sizing: border-box;
 }
 
+
+
 body{
-    background: url(gradient_abstraction_blue_205793_3840x2160.jpg); 
-    background-size: 100%;
-    /* linear-gradient(to bottom right, purple, blue, rgb(32,202,255)); */
+    
+    background-image: linear-gradient(132deg, rgb(228, 157, 252), rgb(168,98,230), rgb(122, 57, 214), rgb(95, 30, 203), rgb(69,6, 191),rgb(61,7,185),rgb(65,19,185), rgb(71, 60, 190), rgb(77, 99, 197), rgb(84, 132, 208), rgb(109, 162, 214), rgb(131, 188, 221), rgb(168, 228, 236));
+    width: 100vw;
+    height: 100vh;
+    background-repeat: no-repeat; 
 }
+#header {
+    background-color: black;
+    height: 60px;
+    width: 100%;
+}
+
+#content{
+    position: relative;
+}
+
+#content .speaker, #content .playclick{
+    position: absolute;
+}
+
+#content .speaker{
+    width: 520px;
+    right: 24rem;
+    top: 16rem;
+}
+
+/* #content .horror{
+    width: 1000px;
+    left: 72;
+
+} */
+
+#content .playclick{
+    display: block;
+    background-color: rgb(79, 181, 11);
+    background-image: radial-gradient(150% 160% at 50% 15%, hsla(0, 0%, 100%, 0.4), transparent 30%);;
+    padding: 10px 32px;
+    font-size: 32px;
+    font-style: italic;
+    color: aliceblue;
+    box-shadow:  inset 0 0.0625rem 0 hsla(0, 0%, 100%, .2), inset 0 -0.125rem 0 rgba(0, 0, 0, .3);
+    text-decoration: none;
+    right: 36rem;
+    top: 36rem;
+    border-bottom-left-radius: 8px ;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    transition-property: padding;
+    transition-duration: 1s;
+    
+}
+
+ #content .playclick:hover{
+    padding: 16px 38px;
+} 
+
 
