--- a/Image/main.css
+++ b/Image/main.css
@@ -23,35 +23,29 @@ body{
     position: relative;
 }
 
-#content .speaker, #content .playclick{
+#content .button{
     position: absolute;
 }
 
-#content .speaker{
+#content .button {
     width: 520px;
-    right: 24rem;
-    top: 16rem;
+    padding-left:300px;
+    padding-top: 100px;
+    display: flex;
 }
 
-/* #content .horror{
-    width: 1000px;
-    left: 72;
-
-} */
-
-#content .playclick{
-    display: block;
+#content .button .playclick{
+    display: flex;
     background-color: rgb(79, 181, 11);
     background-image: radial-gradient(150% 160% at 50% 15%, hsla(0, 0%, 100%, 0.4), transparent 30%);;
     padding: 10px 32px;
+    
     font-size: 32px;
     font-style: italic;
     color: aliceblue;
     box-shadow:  inset 0 0.0625rem 0 hsla(0, 0%, 100%, .2), inset 0 -0.125rem 0 rgba(0, 0, 0, .3);
     text-decoration: none;
-    right: 36rem;
-    top: 36rem;
-    border-bottom-left-radius: 8px ;
+    border-bottom-left-radius: 8px;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
