--- a/Image/main.css
+++ b/Image/main.css
@@ -4,13 +4,15 @@
     box-sizing: border-box;
 }
 
-
+html{
+   
+}
 
 body{
     
     background-image: linear-gradient(132deg, rgb(228, 157, 252), rgb(168,98,230), rgb(122, 57, 214), rgb(95, 30, 203), rgb(69,6, 191),rgb(61,7,185),rgb(65,19,185), rgb(71, 60, 190), rgb(77, 99, 197), rgb(84, 132, 208), rgb(109, 162, 214), rgb(131, 188, 221), rgb(168, 228, 236));
-    width: 100vw;
-    height: 100vh;
+    min-width: 50vw;
+    min-height: 100vh;
     background-repeat: no-repeat; 
 }
 #header {
@@ -28,18 +30,25 @@ body{
 }
 
 #content .button {
-    width: 520px;
-    padding-left:300px;
-    padding-top: 100px;
-    display: flex;
+    /* left:  30%; */
+    right: 20%;
+    padding-top: 10%;
 }
 
+#content .button .speaker{
+    width: 95%;
+}
+
+
 #content .button .playclick{
-    display: flex;
+    display: block;
     background-color: rgb(79, 181, 11);
     background-image: radial-gradient(150% 160% at 50% 15%, hsla(0, 0%, 100%, 0.4), transparent 30%);;
     padding: 10px 32px;
-    
+    height: fit-content;
+    width: fit-content;
+    position: absolute;
+    right: 42%;
     font-size: 32px;
     font-style: italic;
     color: aliceblue;
