--- a/main.css
+++ b/main.css
@@ -4,9 +4,9 @@
     box-sizing: border-box;
 }
 
-html{
+/* html{
    
-}
+} */
 
 body{
     
@@ -36,13 +36,26 @@ body{
 }
 
 #content .button .speaker{
-    width: 95%;
+    width: 120%;
+    position: relative;
+    bottom: 100px;
+        /* right: 200px; */
+    z-index: 4;
+}
+
+#content .button .girl{
+    width: 52%;
+    position: relative;
+    bottom:100px;
+    margin-top: -550px;
+    margin-left: 200px;
+    z-index: 6;
 }
 
 
 #content .button .playclick{
     display: block;
-    background-color: rgb(79, 181, 11);
+    background-color: rgba(14,59,132,255);
     background-image: radial-gradient(150% 160% at 50% 15%, hsla(0, 0%, 100%, 0.4), transparent 30%);;
     padding: 10px 32px;
     height: fit-content;
@@ -50,10 +63,13 @@ body{
     position: absolute;
     right: 42%;
     font-size: 32px;
-    font-style: italic;
+    /* font-style: ; */
     color: aliceblue;
     box-shadow:  inset 0 0.0625rem 0 hsla(0, 0%, 100%, .2), inset 0 -0.125rem 0 rgba(0, 0, 0, .3);
     text-decoration: none;
+    bottom: 50px;
+    right:220px;
+    z-index: 10;
     border-bottom-left-radius: 8px;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
@@ -65,6 +81,5 @@ body{
 
  #content .playclick:hover{
     padding: 16px 38px;
+    transform: scale(1.15);
 } 
-
-
