--- a/assets/main.css
+++ b/assets/main.css
@@ -4,21 +4,55 @@
     box-sizing: border-box;
 }
 
+/* background-image: linear-gradient(132deg, rgb(228, 157, 252), rgb(168,98,230), rgb(122, 57, 214), rgb(95, 30, 203), rgb(69,6, 191),rgb(61,7,185),rgb(65,19,185), rgb(71, 60, 190), rgb(77, 99, 197), rgb(84, 132, 208), rgb(109, 162, 214), rgb(131, 188, 221), rgb(168, 228, 236)); */
+
 @font-face {
     font-family: neosans;
     src: url("font/UTM_Neo_Sans_IntelBold_Italic.ttf");
 }
 
-body{
+body {
+    height: 730px;
+    width: 100%;
     background-image: linear-gradient(132deg, rgb(228, 157, 252), rgb(168,98,230), rgb(122, 57, 214), rgb(95, 30, 203), rgb(69,6, 191),rgb(61,7,185),rgb(65,19,185), rgb(71, 60, 190), rgb(77, 99, 197), rgb(84, 132, 208), rgb(109, 162, 214), rgb(131, 188, 221), rgb(168, 228, 236));
-    width: 100vw;
-    height: 100vh;
+    background-repeat: no-repeat;
     font-family: neosans;
-    /* linear-gradient(to bottom right, purple, blue, rgb(32,202,255)); */
 }
 
-#content .menu {
+#header {
+    background-color: black;
+    height: 80px;
+}
+
+#content {
     color: white;
-    font-size: 12px;
+    font-size: 3.5vw;
+    height: 650px;
+}
+
+#content .menubtn {
+    padding-top: 180px;
+    padding-left: 32px;
+    width: 40%;
+}
+
+#content .menubtn ul {
+    list-style-type: none;
+}
+
+#content .menubtn li {
+    padding-bottom: 6px;
+}
+
+#content .menubtn li:hover {
+    cursor: pointer;
+    color: #a19bd9;
+    /* di chuột chữ to ra */
+    transform: translateZ(0) scale(1.0238);
+}
+
+
+#footer {
+
 }
 
