--- a/main.css
+++ b/main.css
@@ -14,9 +14,11 @@ body{
     background-image: linear-gradient(132deg, rgb(228, 157, 252), rgb(168,98,230), rgb(122, 57, 214), rgb(95, 30, 203), rgb(69,6, 191),rgb(61,7,185),rgb(65,19,185), rgb(71, 60, 190), rgb(77, 99, 197), rgb(84, 132, 208), rgb(109, 162, 214), rgb(131, 188, 221), rgb(168, 228, 236));
     min-width: 50vw;
     min-height: 100vh;
-    background-repeat: no-repeat; 
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 #header {
+    display: flex;
     background-color: black;
     height: 60px;
     width: 100%;
