--- a/assets/main.css
+++ b/assets/main.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
 }
 
-/* background-image: linear-gradient(132deg, rgb(228, 157, 252), rgb(168,98,230), rgb(122, 57, 214), rgb(95, 30, 203), rgb(69,6, 191),rgb(61,7,185),rgb(65,19,185), rgb(71, 60, 190), rgb(77, 99, 197), rgb(84, 132, 208), rgb(109, 162, 214), rgb(131, 188, 221), rgb(168, 228, 236)); */
 
 @font-face {
     font-family: neosans;
@@ -15,8 +14,6 @@ body{
     position: relative;
     font-family: neosans;
     background-image: linear-gradient(132deg, rgb(228, 157, 252), rgb(168,98,230), rgb(122, 57, 214), rgb(95, 30, 203), rgb(69,6, 191),rgb(61,7,185),rgb(65,19,185), rgb(71, 60, 190), rgb(77, 99, 197), rgb(84, 132, 208), rgb(109, 162, 214), rgb(131, 188, 221), rgb(168, 228, 236));
-    /* min-width: 50vw; */
-    /* min-height: 100vh; */
     height: 100%;
     background-repeat: no-repeat; 
     background-size: cover;
@@ -24,64 +21,60 @@ body{
 
 #header {
     height: 80px;
-    display: inline-flex;
+    display: flex;
     width: 100%;
-    position: relative;
+    position: sticky;
     justify-content: space-between;
+    padding: 0 10px 0 10px;
+}
+#header .left_header{
+    position: relative;
+    left: 23px;
+    top: -46%;
 }
 
 #header .left_header .logo{
-    width: 50%;
-    height: 100%;
-    display: flex;
-    justify-content: flex-start;
-    position: relative;
-    top: -40px;
-    left: 23px;
-    /* margin-top: -90px; */
-    float: left
+    height: 105%;
 }
 
-#header .logo img {
-    width: 31%;
-    height: 31%;
+#header .logo >img {
+    width: 120%;
+    height: 150%;
 }
 #header .right_header{
-    align-items: end;
-    width: 35%;
-    float: right
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 15px;
+    position: relative;
 }
 
-#header .right_header .ava {
-    width: 65; 
-    height: 65;
+#header .right_header .ava >img {
+    height: 40px;
+    width: 40px;
+    border-radius: 5px;
 }
-#header .inf{
-    width: 85%;
-    float: left
-}
-#header .notification{
-    width: 15%;
-    float: right
-}
-#header .ava{
-    width: 20%;
-    float: left
-}
+
 #header .player{
-    height: 60px;
+    display: flex;
+    gap: 3px;
+    height: 39px;
     font-family: neosans;
     width: 80%;
-    float: left
 }
 #header .button1{
-    background-color: darkslateblue;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    color: white;
+    background-color: rgba(14,59,132,255);
+    background-image: radial-gradient(150% 160% at 50% 15%, hsla(0, 0%, 100%, 0.4), transparent 30%);
     cursor: pointer;
-    padding: 13px;
-    border: 1px;
+    border: none;
     border-radius: 8px;
     -webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
+    font-family: neosans;
 }
 #header .button1:hover {
     background-color: crimson;
@@ -100,15 +93,20 @@ body{
 }
 
 #content {
+    display: flex;
+    justify-content: space-between;
+    flex-grow: 1;
     color: white;
     font-size: 3.5vw;
-    height: 650px;
+    height: 82vh;
     position: relative;
 }
 
 #content .menubtn {
+    display: flex;
+    flex-direction: column;
     position: relative;
-    padding-top: 12%;
+    padding-top: 10%;
     padding-left: 6%;
     width: 40%;
 }
@@ -128,66 +126,54 @@ body{
     transform: translateZ(0) scale(1.0238);
 }
 
-/* #content .main
-{
-
-} */
-
 #content .button {
-    position: absolute;
-    /* position: fixed; */
-    /* left:  30%; */
-    right: 13%;
-    top: 30%;
+    position: relative;
 }
 
+
 #content .button .speaker{
-    width: 110%;
+    width: 100%;
+    height: auto;
     position: relative;
-    /* top: 10%; */
-    bottom: 100px;
-    /* margin-left: 30%; */
-        /* right: 200px; */
-    z-index: 4;
+    top: 7%;
+    margin-left: -3%;
+    margin-top: 2%;
+    z-index: 0;
 }
 
 #content .button .girl{
     width: 45%;
+    display: flex;
+    justify-items: center;
     position: relative;
-    bottom: 150px;
-    margin-top: -450px;
-    margin-left: 25%;
-    z-index: 6;
+    margin-top: -42%;
+    margin-left: 15%;
+    z-index: 1;
 }
 
 
 #content .button .playclick{
     display: block;
     background-color: rgba(14,59,132,255);
-    background-image: radial-gradient(150% 160% at 50% 15%, hsla(0, 0%, 100%, 0.4), transparent 30%);;
-    padding: 10px 32px;
-    /* height: fit-content;
-    width: fit-content; */
+    background-image: radial-gradient(150% 160% at 50% 15%, hsla(0, 0%, 100%, 0.4), transparent 30%);
+    padding: 1% 5%;
+
     position: absolute;
     right: 42%;
-    font-size: 32px;
-    /* font-style: ; */
+    font-size: 70%;
     color: aliceblue;
     box-shadow:  inset 0 0.0625rem 0 hsla(0, 0%, 100%, .2), inset 0 -0.125rem 0 rgba(0, 0, 0, .3);
     text-decoration: none;
-    bottom: 100px;
-    right:  250px;
+    margin-bottom: 16%;
+    margin-right: 0%;
     z-index: 10;
-    border-bottom-left-radius: 8px;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-    border-bottom-right-radius: 8px;
+    border-radius: 8px;
     transition-property: padding;
     transition-duration: 0.5s;
     
 }
 
- #content .playclick:hover{
+#content .playclick:hover{
     padding: 16px 38px;
     transform: scale(1.15);
 } 
@@ -198,10 +184,10 @@ body{
     align-content: center;
     justify-content: space-between;
     text-align: end;
-    bottom: 0;
+    position: sticky;
 }
 #footer .menu_btn{
-    padding-left: 45px;
+    padding-left: 23px;
     display: flex;
     gap: 1.5rem;
 }
@@ -223,11 +209,12 @@ body{
 }
 #footer .menu_btn .menu_btn_btn .menu_btn_dt span{
     margin-top: 0.5rem;
+    font-family: neosans;
 }
 #footer .para{
-    padding: 8px 45px 10px;
+    padding: 8px 10px 10px;
     font-size: 130%;
-    color: aliceblue;
+    color: rgb(208, 80, 255);
     font-family: neosans;
 }
 
