--- a/assets/playweb.css
+++ b/assets/playweb.css
@@ -33,6 +33,42 @@ body {
     width: 40rem;
 }
 
+.container .hint{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    font-size: 1.5em;
+}
+
+.container .hint{
+    overflow: auto;
+}
+
+.container .hint>div{
+    padding-left: 0.7em;
+}
+
+.container .hint::-webkit-scrollbar {
+    width: 0.2em;
+}
+
+.container .hint::-webkit-scrollbar-thumb {
+    background-color: #fff;
+    width: 2em;
+    border-radius: 18px;
+}
+
+.container .hint h2 {
+    margin-top: 0em;
+    font-size: 2em;
+}
+
+.container .hint p {
+    font-size: 0.6em;
+    opacity: 0.7;
+}
+
 .container .play-area {
     /* position: absolute; */
     /* left: 50%;
@@ -86,13 +122,81 @@ body {
     font-size: 2em;
 }
 
+.container .play-area .disc {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 2em;
+}
+
 .container .play-area .disc img {
     width: 45%;
 }
 
+.container .play-area .disc .btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container .disc .btn #progress {
+    -webkit-appearance: none;
+    width: 20em;
+    height: 0.3em;
+    background: #f53192;
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 2.5em 0;
+    rotate: -90deg;
+}
+
+.container .disc .btn #progress::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 2em;
+    height: 2em;
+    background: #f53192;
+    border-radius: 50%;
+    border: 0.5em solid #fff;
+}
+
+.container .disc .btn #progress-control {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column-reverse;
+}
+
+.container .disc .btn #progress-control div {
+    width: 2.5em;
+    height: 2.5em;
+    background-color: #fff;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    color: #f53192;
+    cursor: pointer;
+    margin: 1em;
+}
+
+.container .disc .btn #progress-control div:hover{
+    transform: scale(1.5);
+    background-color: #f53192;
+    color:#fff;
+}
+
+.container .disc .btn #progress-control div:nth-child(1){
+    rotate: -90deg;
+}
+
+.container .disc .btn #progress-control div:nth-child(3){
+    rotate: -90deg;
+}
+
 .container .play-area .answer{
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
+    align-items: center;
 }
 
 .container .play-area .answer input {
@@ -107,6 +211,11 @@ body {
 
 .container .play-area .answer button {
     border: none;
-    width: 10%;
+    width: 7em;
+    height: 3em;
     border-radius: 36px;
+    color: white;
+    font-size: 1em;
+    background: linear-gradient(132deg, rgb(168,98,230), rgb(122, 57, 214), rgb(69,6, 191),rgb(65,19,185), rgb(71, 60, 190), rgb(77, 99, 197), rgb(168, 228, 236));
 }
+
