--- a/assets/main.css
+++ b/assets/main.css
@@ -79,6 +79,12 @@ body{
     transition-duration: 0.4s;
     font-family: neosans;
 }
+
+#header a{
+    color: white;
+    text-decoration: none;
+}
+
 #header .button1:hover {
     background-color: crimson;
     color: white;
@@ -121,6 +127,13 @@ body{
 #content .menubtn a{
     text-decoration: none;
     color: white;
+}
+
+#content .menubtn a:hover {
+    cursor: pointer;
+    color: #a19bd9;
+    /* di chuột chữ to ra */
+    transform: translateZ(0) scale(1.0238);
 }
 
 #content .menubtn li {
@@ -206,6 +219,12 @@ body{
     cursor: pointer;
     border: 0;
 }
+
+#footer a{
+    color: white;
+    text-decoration: none;
+}
+
 #footer .menu_btn .menu_btn_btn:hover .menu_btn_dt{
     color:darkgray;
 }
@@ -225,6 +244,17 @@ body{
     color: rgb(208, 80, 255);
     font-family: neosans;
 }
+
+.modal_thuong a{
+    text-decoration: none;
+    color: white;
+}
+
+.select_rank_mode_play_button a{
+    text-decoration: none;
+    color: white;
+}
+
 .modal_thuong{
     position: fixed;
     top: 0;
@@ -614,7 +644,7 @@ body{
     z-index: 15;
     visibility: hidden;
     opacity: 0;
-    transition: opacity linear 1s;
+    transition: opacity linear 0.5s;
 }
 
 .leaderboard:target{
@@ -637,6 +667,16 @@ body{
     background-size: cover;
     overflow-y: scroll;
     z-index: 20;
+}
+
+.leaderboard .ldboardbody::-webkit-scrollbar {
+    width: 1em;
+}
+
+.leaderboard .ldboardbody::-webkit-scrollbar-thumb {
+    background-color: #fff;
+    width: 2em;
+    border-radius: 18px;
 }
 
 .overlay{
@@ -663,7 +703,7 @@ body{
     overflow: scroll;
 } */
 
-.rank
+.leaderboard .rank
 {
     margin: auto;
     color: white;
@@ -735,7 +775,7 @@ table, th, tr{
 .avmbody{
     position: relative;
     width: 1200px;
-    height: 450px;
+    height: 480px;
     background-image: linear-gradient(132deg, rgb(228, 157, 252), rgb(168,98,230), rgb(122, 57, 214), rgb(95, 30, 203), rgb(69,6, 191),rgb(61,7,185),rgb(65,19,185), rgb(71, 60, 190), rgb(77, 99, 197), rgb(84, 132, 208), rgb(109, 162, 214), rgb(131, 188, 221), rgb(168, 228, 236));
     margin: auto;
     background-repeat: no-repeat;
@@ -754,7 +794,7 @@ table, th, tr{
     z-index: 15;
     visibility: hidden;
     opacity: 0;
-    transition: opacity linear 1s;
+    transition: opacity linear 0.5s;
 }
 
 #avm:target{
@@ -799,18 +839,22 @@ table, th, tr{
 
 .avmbody > img{
     position: absolute;
+    /* padding: 10px; */
     left: 2.5%;
     width: 300px;
-    height: 300px;
+    height: 350px;
     top: 10%;
 }
 
 .avmbody .avm img{
-    width: 50px;
-    height: 50px;
+    padding: 10px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
     vertical-align: middle;
 }
+
+
 
 .achievement a{
     background-color: rgba(14,59,132,255);
