--- a/backend/src/resources/views/home.hbs
+++ b/backend/src/resources/views/home.hbs
@@ -59,7 +59,7 @@
     <div id="footer">
         <div class="menu_btn">
                 <button type="submit" class="menu_btn_btn" >
-                    <a href="setting.html" class="menu_btn_dt">
+                    <a href="setting" class="menu_btn_dt">
                         <i class="fa-solid fa-gear"></i>
                         <span><b>CÀI ĐẶT</b></span>
                     </a>
