--- a/backend/src/assets/main.css
+++ b/backend/src/assets/main.css
@@ -1,6 +1,7 @@
 *{
     padding: 0;
     /* margin: 0; */
+    margin-bottom: 12px;
     box-sizing: border-box;
 }
 
@@ -78,7 +79,7 @@ body{
 #header .nav .username{
     color: white;
     position: relative;
-    top: 4px;
+    margin-top: 4px;
     display: flex;
     flex-direction: row;
     gap: 10px;
@@ -187,7 +188,7 @@ body{
     flex-grow: 1;
     color: white;
     font-size: 3.5vw;
-    height: 82vh;
+    height: 76vh;
     position: relative;
 }
 
