--- a/backend/src/resources/views/home.hbs
+++ b/backend/src/resources/views/home.hbs
@@ -10,7 +10,7 @@
                 <div class="ava">
                     <img src="assets/img/Avatar_header.jpg" alt="" >
                 </div>
-                <div class="player" >
+                <div class="indexer" >
                     <div class="nav">
                         <p class = "username" id = "username">
                             KING_OF_MELODY
@@ -18,10 +18,10 @@
                         </p>
                         <div class="subnav" id = "subnav">
                             <div class="background">
-                                <a href="profile.html">
+                                <a href="profile">
                                     <div class="profile">HỒ SƠ</div>
                                 </a>
-                                <a href="startpage.html">
+                                <a href="login">
                                     <div class="signout">ĐĂNG XUẤT</div>
                                 </a>
                             </div>
@@ -50,7 +50,7 @@
         <div class="button">
             <img src="assets/img/Speaker.png"  alt="Speaker" class="speaker">
             <img src="assets/img/lonelygirl.jpg" alt="Lonely Girl" class="girl">
-            <a href="playweb.html" class="playclick"><b>PLAY</b></a>
+            <a href="playsingle" class="playclick"><b>PLAY</b></a>
             
         </div>
         
@@ -133,8 +133,8 @@
             </div>
 
             <div class="select_normal_mode_play_button">
-                <button type="submit"  class="playclick"><b><a href="playweb.html">PLAY</a></b></button>
-                <button type="submit"  class="resumeclick"><b><a href="playweb.html">RESUME</a></b></button>
+                <button type="submit"  class="playclick"><b><a href="playsingle">PLAY</a></b></button>
+                <button type="submit"  class="resumeclick"><b><a href="playsingle">RESUME</a></b></button>
             </div>
         </div>
 
@@ -196,7 +196,7 @@
 
                     <div class="select_rank_mode_button">
                         <button class="createclick" id = "create_room"><b>Tạo phòng</b></button>
-                        <button class="playclick"><b><a href="playweb.html">Vào nhanh</a></b></button>
+                        <button class="playclick"><b><a href="playmulti">Vào nhanh</a></b></button>
                     </div>
                 </div>
 
@@ -225,7 +225,7 @@
                 </div>
 
                 <div class="create_room_create">
-                    <button class="create"><a href="playweb.html">PLAY</a></button>
+                    <button class="create"><a href="indexsingle">index</a></button>
                 </div>
             </div>
         </div>
