search post and connect db

--- a/backend/src/resources/views/login.hbs
+++ b/backend/src/resources/views/login.hbs
@@ -12,7 +12,7 @@
     <body>
         <div class="container">
             <div class="signin-signup">
-                <form action="" class="sign-in-form">
+                <form method="POST" action="/login/processSignin" class="sign-in-form">
                     <h2 class="title">Đăng nhập</h2>
                     <div class="input-field">
                         <i class="fa fa-user"></i>
@@ -24,21 +24,22 @@
                     </div>
                     <input type="submit" value="Login" class="btn" id="submitBtn">
                 </form>
-                <form action="" class="sign-up-form">
+                <form method="POST" action="/login/processSignup" class="sign-up-form">
                     <h2 class="title">Đăng ký</h2>
                     <div class="input-field">
                         <i class="fa fa-envelope"></i>
-                        <input type="text" placeholder="Email">
+                        <input type="text" name="email" placeholder="Email">
                     </div>
                     <div class="input-field">
                         <i class="fa fa-user"></i>
-                        <input type="text" placeholder="Username">
+                        <input type="text" name="username" placeholder="Username">
                     </div>
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="Password">
+                        <input type="password" name="password" placeholder="Password">
                     </div>
-                    <input type="submit" value="Sign up" class="btn">
+                    <button type="submit" class="btn">Sign up</button>
+                    {{!-- <input type="submit" value="Sign up" class="btn"> --}}
                 </form>
             </div>
             <div class="panels-container">
