backend login, verify email, forget password

--- a/backend/src/assets/playweb.css
+++ b/backend/src/assets/playweb.css
@@ -73,7 +73,7 @@ body {
     /* position: absolute; */
     /* left: 50%;
     top: 0; */
-    width: calc(200/3) %;
+    /* width: calc(200/3) %; */
 }
 
 .container .play-area img{
