--- a/backend/src/assets/profile.css
+++ b/backend/src/assets/profile.css
@@ -10,7 +10,7 @@
 
 @font-face {
     font-family: neosans;
-    src: url("assets/font/UTM_Neo_Sans_IntelBold_Italic.ttf");
+    src: url("../../assets/font/UTM_Neo_Sans_IntelBold_Italic.ttf");
 }
 
 body {
