--- a/backend/src/resources/views/login.hbs
+++ b/backend/src/resources/views/login.hbs
@@ -16,13 +16,15 @@
                     <h2 class="title">Đăng nhập</h2>
                     <div class="input-field">
                         <i class="fa fa-user"></i>
-                        <input type="text" placeholder="Username">
+                        <input type="text" name="email" placeholder="Email">
                     </div>
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="Password">
+                        <input type="password" name="password" placeholder="Password">
                     </div>
-                    <input type="submit" value="Login" class="btn" id="submitBtn">
+                    <div><a href="/resetPassword" style="color: rgb(223, 74, 223); font-size ">Forgot your password?</a></div>
+                     
+                    <button type="submit" class="btn">Sign in</button>
                 </form>
                 <form method="POST" action="/login/processSignup" class="sign-up-form">
                     <h2 class="title">Đăng ký</h2>
@@ -38,6 +40,7 @@
                         <i class="fas fa-lock"></i>
                         <input type="password" name="password" placeholder="Password">
                     </div>
+                   
                     <button type="submit" class="btn">Sign up</button>
                     {{!-- <input type="submit" value="Sign up" class="btn"> --}}
                 </form>
